1.5 add-controllers